k8NET/prod/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: k8net-ingress
  namespace: prod
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /$1
spec:
  ingressClassName: nginx
  rules:
  - host: "prod.k8net.com"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: k8net-web-service
            port:
              number: 80
